# MediaPipeHolisticModelWeb

./: .gitignore  dependencies.txt  package.json
asl_model_training/: .gitignore  README.md  package.json  pyproject.toml  requirements.txt
asl_model_training/backend/: collect_data_with_camera.py  database.py  entities.py  main.py  requirements.yml  sequence_aggregator.py  test_with_camera.py  train_model.py  train_mp_model.py  train_tf_model.py
asl_model_training/backend/Logs/train/: events.out.tfevents.1712876279.XUYEN-NGUYEN-SL.83600.0.v2
asl_model_training/backend/models/: alphabet_motion_classifier.keras  alphabet_motion_classifier_diff.keras
asl_model_training/backend/models/archive/: alphabet_motion_classifier_4112024.keras  model.json
asl_model_training/frontend/: package.json
asl_model_training/frontend/public/assets/: model.json
asl_model_training/frontend/src/: App.css  App.jsx  index.css
asl_model_training/frontend/src/components/: Demo.jsx  DemoComplete.jsx  DummyPage.jsx  HalfVideo.jsx  ModelStyles.css  ModelTesterLite.jsx  ModelTrainerLite.jsx  NewModelTrainerLite.jsx
backend/: database.py  entities.py  main.py  model.py
backend/data/: dummy.npy
backend/data/hello/: 0.npy
backend/models/: common_signs_lite.keras
frontend/: .gitignore  dependencies.txt
frontend/public/assets/: model.json
frontend/src/: App.css  App.jsx
frontend/src/assets/: model.json
frontend/src/components/: ModelStyles.css  ModelTester.jsx  ModelTesterLite.jsx  ModelTrainer.jsx
