[tool.poetry]
name = "asl-model-training"
version = "0.1.0"
description = ""
authors = ["Xuyen Nguyen <xuyennguyen2733@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "^0.108.0"
uvicorn = "^0.25.0"
pytest = "^7.4.0"
httpx = "^0.26.0"
sqlmodel = "^0.0.14"
numpy = "^1.26.4"
keras = ">=2.15.0,<2.16"
scikit-learn = "^1.4.1.post1"
tensorflow-io-gcs-filesystem = { version = "0.31.0"}
tensorflow = "2.15.0"
pydantic = "^2.6.2"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
